fixed z-index navbar

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -186,8 +186,12 @@ main{
 
 }
 
-.accordion-body{
-    background-color: map-get($commons, background-color-secundario);
+.accordion-item{
+    color: var(--bs-accordion-color);
+    padding: 2% 16% 2% 16%;
+    background-color: map-get($commons, background-color-primario);
+    border:none
+    
 }
 
 /*faq*/
